Fixed 403 error on InnerTube clients